fixed webkit bug on safari, chrome to be done in the future

--- a/Content/css/main.css
+++ b/Content/css/main.css
@@ -96,15 +96,16 @@ img.charaImage {
                                   not supported by any browser */
 }
 
-.armorSlot{
-    width:100%;
-    height:100%;
-    position:fixed;
-    background-position:center;
-    background-repeat:no-repeat;
-    background-size:100% 100%;
+.armorSlot {
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     background-color: lightgrey;
-    border-radius:8px;
+    border-radius: 8px;
 }
 
 .svgContainer,svg{
